--- a/src/main/resources/com/example/parcialfinal/VistaGeneral.fxml
+++ b/src/main/resources/com/example/parcialfinal/VistaGeneral.fxml
@@ -19,7 +19,7 @@
                             <children>
                                 <VBox alignment="CENTER" prefHeight="134.0" prefWidth="178.0">
                                     <children>
-                                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="160.0" prefWidth="284.0" text=" Biblioteca" textFill="WHITE">
+                                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="160.0" prefWidth="284.0" text="Clinica UQ" textFill="WHITE">
                                             <font>
                                                 <Font name="System" size="27.0" />
                                             </font>
@@ -33,17 +33,17 @@
                                     <children>
                                         <AnchorPane prefHeight="264.0" prefWidth="326.0">
                                             <children>
-                                                <Button fx:id="btnUsuarios" alignment="CENTER" layoutX="20.0" layoutY="28.0" mnemonicParsing="false" onAction="#onUsuarios" prefHeight="48.0" prefWidth="137.0" style="-fx-border-radius: 70; -fx-background-color: #416282; -fx-border-color: black; -fx-background-radius: 70;" text="Usuarios" textFill="#fafafa">
+                                                <Button fx:id="btnUsuarios" alignment="CENTER" layoutX="20.0" layoutY="28.0" mnemonicParsing="false" onAction="#onUsuarios" prefHeight="48.0" prefWidth="137.0" style="-fx-border-radius: 70; -fx-background-color: #416282; -fx-border-color: black; -fx-background-radius: 70;" text="Medicos" textFill="#fafafa">
                                                     <font>
                                                         <Font size="13.5" />
                                                     </font>
                                                 </Button>
-                                                <Button fx:id="btnLibros" alignment="CENTER" layoutX="20.0" layoutY="91.0" mnemonicParsing="false" onAction="#onLibros" prefHeight="48.0" prefWidth="137.0" style="-fx-border-radius: 70; -fx-background-color: #416282; -fx-border-color: black; -fx-background-radius: 70;" text="Libros" textFill="#fafafa">
+                                                <Button fx:id="btnPacientes" alignment="CENTER" layoutX="20.0" layoutY="91.0" mnemonicParsing="false" onAction="#onLibros" prefHeight="48.0" prefWidth="137.0" style="-fx-border-radius: 70; -fx-background-color: #416282; -fx-border-color: black; -fx-background-radius: 70;" text="Pacientes" textFill="#fafafa">
                                                     <font>
                                                         <Font size="13.5" />
                                                     </font>
                                                 </Button>
-                                                <Button fx:id="btnPrestamos" alignment="CENTER" layoutX="20.0" layoutY="150.0" mnemonicParsing="false" onAction="#onPrestamos" prefHeight="48.0" prefWidth="137.0" style="-fx-border-radius: 70; -fx-background-color: #416282; -fx-border-color: black; -fx-background-radius: 70;" text="Prestamos" textFill="#fafafa">
+                                                <Button fx:id="btnCitas" alignment="CENTER" layoutX="20.0" layoutY="150.0" mnemonicParsing="false" onAction="#onPrestamos" prefHeight="48.0" prefWidth="137.0" style="-fx-border-radius: 70; -fx-background-color: #416282; -fx-border-color: black; -fx-background-radius: 70;" text="Citas" textFill="#fafafa">
                                                     <font>
                                                         <Font size="13.5" />
                                                     </font>
