--- a/src/main/resources/com/example/parcialfinal/RegistroCitas.fxml
+++ b/src/main/resources/com/example/parcialfinal/RegistroCitas.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
@@ -19,7 +20,7 @@
     <children>
         <HBox prefHeight="86.0" prefWidth="600.0">
             <children>
-                <Label text="Registro de Prestamos">
+                <Label text="Registro de Citas">
                     <font>
                         <Font name="System Bold" size="30.0" />
                     </font>
@@ -46,7 +47,7 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Label text="Usuario:" GridPane.rowIndex="2" />
+                                <Label text="Medico" GridPane.rowIndex="2" />
                                 <Label prefHeight="18.0" prefWidth="90.0" text="Libro:" GridPane.rowIndex="3" />
                                 <Label text="Cantidad:" GridPane.rowIndex="4" />
                                 <ComboBox fx:id="cmbUsuario" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -54,6 +55,7 @@
                                 <Spinner fx:id="spinnerCantidad" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                 <Label text="Fecha:" />
                                 <Label fx:id="lblHora" text="11/11/2025" GridPane.columnIndex="1" />
+                        <DatePicker fx:id="datePicker" GridPane.columnIndex="1" />
                             </children>
                         </GridPane>
                         <VBox prefHeight="132.0" prefWidth="214.0">
