--- a/src/main/resources/com/example/parcialfinal/RegistroPacientes.fxml
+++ b/src/main/resources/com/example/parcialfinal/RegistroPacientes.fxml
@@ -18,7 +18,7 @@
     <children>
         <HBox prefHeight="86.0" prefWidth="600.0">
             <children>
-                <Label text="Registro de Libros">
+                <Label text="Registro de Pacientes">
                     <font>
                         <Font name="System Bold" size="30.0" />
                     </font>
@@ -34,39 +34,42 @@
                     <children>
                         <GridPane prefHeight="132.0" prefWidth="355.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.20001220703125" minWidth="10.0" prefWidth="80.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="331.2" minWidth="10.0" prefWidth="331.2" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.20001220703125" minWidth="10.0" prefWidth="125.60003662109375" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="331.2" minWidth="10.0" prefWidth="224.79996337890623" />
                             </columnConstraints>
                             <rowConstraints>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Label text="Código" />
-                                <Label text="Nombre" GridPane.rowIndex="1" />
-                                <Label text="Precio" GridPane.rowIndex="2" />
-                                <Label text="Stock" GridPane.rowIndex="3" />
+                                <Label text="Cedula:" />
+                                <Label text="Nombre:" GridPane.rowIndex="1" />
+                                <Label text="Telefono:" GridPane.rowIndex="2" />
+                                <Label text="Correo:" GridPane.rowIndex="3" />
                                 <TextField fx:id="txtCodigo" GridPane.columnIndex="1" />
                                 <TextField fx:id="txtNombre" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                 <TextField fx:id="txtPrecio" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                 <TextField fx:id="txtStock" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="Motivo de consulta:" GridPane.rowIndex="4" />
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
                             </children>
                         </GridPane>
                         <VBox prefHeight="132.0" prefWidth="214.0">
                             <children>
-                                <Button fx:id="btnAgregar" mnemonicParsing="false" prefHeight="26.0" prefWidth="70.0" onAction="#onAgregar" text="Agregar">
+                                <Button fx:id="btnAgregar" mnemonicParsing="false" onAction="#onAgregar" prefHeight="26.0" prefWidth="70.0" text="Agregar">
                                     <VBox.margin>
                                         <Insets bottom="20.0" />
                                     </VBox.margin>
                                 </Button>
-                                <Button fx:id="btnEliminar" mnemonicParsing="false" prefHeight="26.0" prefWidth="70.0" onAction="#onEliminar" text="Eliminar">
+                                <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#onEliminar" prefHeight="26.0" prefWidth="70.0" text="Eliminar">
                                     <VBox.margin>
                                         <Insets bottom="20.0" />
                                     </VBox.margin>
                                 </Button>
-                                <Button fx:id="btnModificar" mnemonicParsing="false" prefHeight="26.0" prefWidth="70.0" onAction="#onModificar" text="Actualizar" />
+                                <Button fx:id="btnModificar" mnemonicParsing="false" onAction="#onModificar" prefHeight="26.0" prefWidth="70.0" text="Actualizar" />
                             </children>
                             <HBox.margin>
                                 <Insets />
