--- a/src/main/resources/com/example/parcialfinal/RegistroCitas.fxml
+++ b/src/main/resources/com/example/parcialfinal/RegistroCitas.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -45,22 +46,25 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Label text="Medico" GridPane.rowIndex="2" />
-                                <Label prefHeight="18.0" prefWidth="90.0" text="Libro:" GridPane.rowIndex="3" />
-                                <Label text="Cantidad:" GridPane.rowIndex="4" />
-                                <ComboBox fx:id="cmbUsuario" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                <ComboBox fx:id="cmbLibro" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                <Spinner fx:id="spinnerCantidad" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <Label text="Medico" GridPane.rowIndex="3" />
+                                <Label prefHeight="18.0" prefWidth="90.0" text="Paciente:" GridPane.rowIndex="4" />
+                                <Label text="Precio:" GridPane.rowIndex="5" />
+                                <ComboBox fx:id="cmbMedico" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <ComboBox fx:id="cmbPaciente" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <Spinner fx:id="spinnerCantidad" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                                 <Label text="Fecha:" />
                                 <Label fx:id="lblHora" text="11/11/2025" GridPane.columnIndex="1" />
                         <DatePicker fx:id="datePicker" GridPane.columnIndex="1" />
+                        <Label text="Hora:" GridPane.rowIndex="2" />
+                        <TextField fx:id="txtHora" prefHeight="26.0" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                             </children>
                         </GridPane>
                         <VBox prefHeight="132.0" prefWidth="214.0">
                             <children>
-                                <Button fx:id="btnPrestar" mnemonicParsing="false" onAction="#onPrestar" prefHeight="26.0" prefWidth="70.0" text="Prestar">
+                                <Button fx:id="btnCitar" mnemonicParsing="false" onAction="#onPrestar" prefHeight="26.0" prefWidth="70.0" text="Citar">
                                     <VBox.margin>
                                         <Insets bottom="20.0" />
                                     </VBox.margin>
@@ -72,13 +76,10 @@
                                     </columnConstraints>
                                     <rowConstraints>
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
                                     <children>
                                         <Label text="Precio:" />
-                                        <Label text="Subtotal:" GridPane.rowIndex="1" />
                                         <Label fx:id="lblPrecio" text="\$0.00" GridPane.columnIndex="1" />
-                                        <Label fx:id="lblSubtotal" prefHeight="18.0" prefWidth="52.0" text="\$0.00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                     </children>
                                 </GridPane>
                             </children>
@@ -96,13 +97,13 @@
                 </HBox>
                 <HBox prefHeight="204.0" prefWidth="600.0">
                     <children>
-                        <TableView fx:id="tablaPrestamos" prefHeight="182.0" prefWidth="567.0">
+                        <TableView fx:id="tablaCitas" prefHeight="182.0" prefWidth="567.0">
                             <columns>
                                 <TableColumn fx:id="colFecha" prefWidth="111.20001220703125" text="Fecha" />
-                                <TableColumn fx:id="colUsuario" prefWidth="143.20001220703125" text="Usuario" />
-                                <TableColumn fx:id="colLibro" prefWidth="99.20001220703125" text="Libro" />
-                                <TableColumn fx:id="colCantidad" prefWidth="108.0" text="Cantidad" />
-                                <TableColumn fx:id="colSubtotal" prefWidth="95.20001220703125" text="Subtotal" />
+                        <TableColumn fx:id="colHora" prefWidth="90.4000244140625" text="Hora" />
+                                <TableColumn fx:id="colMedico" prefWidth="128.79998779296875" text="Medico" />
+                                <TableColumn fx:id="colPaciente" prefWidth="136.800048828125" text="Paciente" />
+                                <TableColumn fx:id="colPrecio" prefWidth="91.20001220703125" text="Precio" />
                             </columns>
                         </TableView>
                     </children>
