--- a/src/main/resources/com/example/parcialfinal/RegistroCitas.fxml
+++ b/src/main/resources/com/example/parcialfinal/RegistroCitas.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.parcialfinal.Controllers.PrestamosController">
+<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.parcialfinal.Controllers.RegistroCitasController">
     <children>
         <HBox prefHeight="86.0" prefWidth="600.0">
             <children>
